--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const { currentLocale } = Astro;
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex">
+  <meta name="referrer" content="no-referrer" />
   <title>{title}</title>
   <link rel="shortcut icon" href={favicon.src} type="image/png">
   <ViewTransitions />
