--- a/src/components/A.astro
+++ b/src/components/A.astro
@@ -21,6 +21,8 @@ if(pathName.includes('projects') || pathName.includes('challenges') || pathName.
   class={`transition ease-in-out duration-300 text-center relative block h-8 md:h-20 px-4 border-b-2 border-transparent 
   before:content-[""] before:w-16 before:h-16 before:absolute before:left-2/4 before:top-2/4 before:-translate-x-2/4 before:-translate-y-2/4 hover:before:shadow-[0_0_1rem_1rem] before:rounded-full before:transition-all before:duration-300 before:-z-10
   ${classExtra}`}
-  href={href}>
+  href={href}
+  rel="noopener noreferrer"
+  >
   {name}
 </a>
