--- a/src/components/ViewMore.astro
+++ b/src/components/ViewMore.astro
@@ -8,7 +8,7 @@ const { href, lang } = Astro.props;
 const text = lang === "en" ? "View more" : "Ver más";
 ---
 <div class="flex justify-center mt-6">
-  <a href={href} class="mx-auto transition-colors duration-300 text-center bg-green-800 hover:bg-green-600 text-white rounded-full px-8 py-2 font-bold">
+  <a href={href} rel="noopener noreferrer" class="mx-auto transition-colors duration-300 text-center bg-green-800 hover:bg-green-600 text-white rounded-full px-8 py-2 font-bold">
     {text}
   </a>
 </div>
